# loupe-old

./: Cargo.toml
crates/loupe-old/: Cargo.toml
crates/loupe-old-derive/: Cargo.toml
crates/loupe-old-derive/src/: lib.rs
crates/loupe-old/src/: lib.rs
crates/loupe-old/tests/: derive.rs
