[package]
name = "loupe-old"
version = "0.1.3"
description = "Profiling tool for Rust"
repository = "https://github.com/wasmerio/loupe"
license = "MIT"
edition = "2018"

[dependencies]
loupe-old-derive = { path = "../loupe-old-derive", version = "0.1.3", optional = true }
indexmap = { version = "1.6", optional = true }
rustversion = "1.0"

[features]
default = ["derive"]
derive = ["loupe-old-derive"]
enable-indexmap = ["indexmap"]